<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameResult">

    <RelativeLayout
        android:id="@+id/choiceLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/gamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:text="@string/gamePrompt"
            android:textSize="36sp" />

        <ImageButton
            android:id="@+id/rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gamePrompt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/opt1"
            android:maxWidth="180sp"
            android:maxHeight="180sp"
            android:onClick="selectRock"
            android:scaleType="fitCenter"
            android:src="@drawable/rock" />

        <ImageButton
            android:id="@+id/paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rock"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/opt2"
            android:maxWidth="180sp"
            android:maxHeight="180sp"
            android:onClick="selectPaper"
            android:scaleType="fitCenter"
            android:src="@drawable/paper" />

        <ImageButton
            android:id="@+id/scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paper"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/opt3"
            android:maxWidth="180sp"
            android:maxHeight="180sp"
            android:onClick="selectScissors"
            android:scaleType="fitCenter"
            android:src="@drawable/scissors" />
    </RelativeLayout>

    <TextView
        android:id="@+id/resultPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="36sp" />

    <GridLayout
        android:id="@+id/resultLayout"
        android:layout_below="@+id/resultPrompt"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/user"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:text="@string/computer"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/rockBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:adjustViewBounds="true"
            android:maxWidth="50sp"
            android:maxHeight="50sp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/opt1"
            android:src="@drawable/rock"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/paperBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:adjustViewBounds="true"
            android:maxWidth="50sp"
            android:maxHeight="50sp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/opt2"
            android:src="@drawable/paper"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/scissorsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:adjustViewBounds="true"
            android:maxWidth="50sp"
            android:maxHeight="50sp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/opt3"
            android:src="@drawable/scissors"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/rockBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:adjustViewBounds="true"
            android:maxWidth="50sp"
            android:maxHeight="50sp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/opt1"
            android:src="@drawable/rock"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/paperBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:adjustViewBounds="true"
            android:maxWidth="50sp"
            android:maxHeight="50sp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/opt2"
            android:src="@drawable/paper"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/scissorsBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:adjustViewBounds="true"
            android:maxWidth="50sp"
            android:maxHeight="50sp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/opt3"
            android:src="@drawable/scissors"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/vs"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/vs"
            android:textSize="40sp"/>
    </GridLayout>

    <Button
        android:id="@+id/replayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/replayBtn"
        android:textSize="36sp"
        android:visibility="invisible"/>

</RelativeLayout>